# root-kg

./: .env.example  .gitignore  CHANGELOG.md  README.md  __main__.py  chunker.py  cli.py  com.shadman.root-refresh.plist  config.example.yaml  db.py  embeddings.py  extractor.py  health-check.py  indexer.py  llm.py  merge_cli.py  pyproject.toml  query.py  rootd.py  run-indexer.sh  server.py  skill-audit.py  slack-alert.py  techpack.yaml
.claude/: CLAUDE.md
adapters/: vault.py
templates/: root-instructions.md
tests/: test_db.py  test_extractor.py
tools/: correlations.py  graph.py  intelligence.py  patterns.py  search.py
